# lattice-id

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  K8S_DEV.md  MULTI_REGION.md  OIDC_COMPLIANCE_AUDIT.md  README.md  SCALABILITY_ANALYSIS.md  dev.sh
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  publish.yml
.wash/: config.yaml
abuse-protection/: Cargo.toml
abuse-protection/src/: lib.rs
abuse-protection/wit/: abuse.wit  world.wit
admin-ui/: Cargo.toml  Trunk.toml  index.html  style.css
admin-ui/host/: Cargo.toml
admin-ui/host/src/: lib.rs
admin-ui/host/wit/: world.wit
admin-ui/src/: api.rs  app.rs  auth.rs  main.rs  util.rs  webauthn.rs
admin-ui/src/views/: account.rs  audit_log.rs  bootstrap.rs  client_detail.rs  client_list.rs  dashboard.rs  idp_list.rs  login.rs  mod.rs  settings.rs  user_detail.rs  user_list.rs
admin-ui/src/views/hooks/: detail.rs  list.rs
admin-ui/src/views/tenants/: detail.rs  list.rs
core-service/: Cargo.toml
core-service/src/: jwt.rs  logger.rs  main.rs  metrics.rs  store.rs
core-service/wit/: world.wit
crypto-vault/: Cargo.toml
crypto-vault/src/: lib.rs
crypto-vault/wit/: vault.wit  world.wit
deploy/: deploy-local-prod.sh  deploy-local.sh  deploy-two-region-single-cluster.sh  deploy-two-region.sh  kind-config.yaml  kind-eu.yaml  kind-two-region.yaml  kind-us.yaml  latticedb-eu.yaml  latticedb-us.yaml  nats-data.conf  nats-leafnode.conf  workloaddeployment-eu.yaml  workloaddeployment-ghcr.yaml  workloaddeployment-local-prod.yaml  workloaddeployment-local.yaml  workloaddeployment-us.yaml
email-worker/: Cargo.toml
email-worker/src/: lib.rs
email-worker/wit/: world.wit
key-manager/: Cargo.toml
key-manager/src/: lib.rs
key-manager/wit/: keys.wit  kv.wit  world.wit
manifests/: workloaddeployment.yaml
oidc-gateway/: Cargo.toml
oidc-gateway/src/: abuse.rs  account.rs  authorize.rs  backchannel.rs  device.rs  discovery.rs  email.rs  google.rs  hooks.rs  http_client.rs  jwt.rs  key_manager.rs  keys.rs  lib.rs  logger.rs  login.rs  management.rs  management_tests.rs  passkeys.rs  region_authority.rs  service_client.rs  social.rs  store.rs  token.rs  totp.rs  userinfo.rs  util.rs  vault.rs
oidc-gateway/wit/: world.wit
password-hasher/: Cargo.toml
password-hasher/src/: lib.rs
password-hasher/wit/: world.wit
region-authority/: Cargo.toml
region-authority/src/: lib.rs
region-authority/wit/: authority.wit  world.wit
tests/: benchmark.py  benchmark.sh  google_mock_server.py  integration_account.sh  integration_authority.sh  integration_backchannel.sh  integration_concurrent.sh  integration_consistency.sh  integration_hardening.sh  integration_hooks.sh  integration_isolation.sh  integration_logout.sh  integration_mfa.sh  integration_new_features.sh  integration_protocol.sh  integration_rate_limit.sh  integration_restart.sh  integration_social_mock.sh  integration_sso.sh  integration_two_region.sh  lib.sh  perf_profile.py  perf_profile.sh  run_cluster_tests.sh  stress_authority.sh  validate_kv_semantics.sh
