[workspace]
members = [
    "password-hasher",
    "core-service",
    "oidc-gateway",
    "email-worker",
    "abuse-protection",
    "key-manager",
    "region-authority",
]
exclude = [
    "admin-ui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Taika 3D Oy"]
description = "NATS-native OIDC identity provider for wasmCloud"
repository = "https://github.com/Taika-3D-Oy/lattice-id"
license = "Apache-2.0"

[workspace.dependencies]
wit-bindgen = "0.51"
wstd = "0.6"
wasip2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
strip = true
