[workspace]
members = [
    "password-hasher",
    "oidc-gateway",
    "email-worker",
    "abuse-protection",
    "key-manager",
    "region-authority",
    "crypto-vault",
]
exclude = [
    "admin-ui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.4.1"
authors = ["Taika 3D Oy"]
description = "NATS-native OIDC identity provider for wasmCloud"
repository = "https://github.com/Taika-3D-Oy/lattice-id"
license = "Apache-2.0"

[workspace.dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = ["async", "async-spawn", "macros"] }
wasip3 = { version = "0.5", features = ["http-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
http = "1"
http-body = "1"

[profile.release]
lto = true
opt-level = "s"
strip = true
