[package]
name = "lattice-id-admin"
version = "0.2.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
gloo-net = { version = "0.7", features = ["http", "json"] }
gloo-storage = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Document", "Element",
    "Crypto", "History", "Location", "Headers",
    "Request", "RequestInit", "RequestMode", "Response",
] }
js-sys = "0.3"
log = "0.4"
console_log = { version = "1", features = ["color"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
