[package]
name = "core-service"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wit-bindgen.workspace = true
wstd.workspace = true
serde.workspace = true
serde_json.workspace = true
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", features = ["getrandom"] }
num-bigint-dig = { version = "0.8", default-features = false }
