[package]
name = "crypto-vault"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2" }

[package.metadata.component]
package = "taika3d:crypto-vault"
target = "wit"
