[package]
name = "email-worker"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Email delivery worker — exports lattice-id:notify/email interface"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
wasip3.workspace = true
serde_json.workspace = true
serde.workspace = true
http.workspace = true
http-body.workspace = true
bytes.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
