[package]
name = "oidc-gateway"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wstd.workspace = true
wit-bindgen.workspace = true
wasip2.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", default-features = false }
getrandom = "0.2"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
num-bigint-dig = { version = "0.8", default-features = false }
subtle = { version = "2.5", default-features = false }
rhai = { version = "1", default-features = false, features = ["std"] }
