[package]
name = "password-hasher"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
